--- a/gui_pyqt/mainwindow.ui
+++ b/gui_pyqt/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>461</width>
-    <height>442</height>
+    <height>251</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
       <x>10</x>
       <y>10</y>
       <width>441</width>
-      <height>411</height>
+      <height>221</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -37,14 +37,25 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>10</y>
-        <width>413</width>
-        <height>141</height>
+        <y>30</y>
+        <width>411</width>
+        <height>101</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="1" column="2" colspan="2">
-        <widget class="QComboBox" name="indexComboType"/>
+        <widget class="QComboBox" name="indexComboType">
+         <item>
+          <property name="text">
+           <string>JPG</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>PNG</string>
+          </property>
+         </item>
+        </widget>
        </item>
        <item row="0" column="2">
         <widget class="QLabel" name="indexLabelType">
@@ -78,7 +89,11 @@
         <widget class="QLineEdit" name="indexEditSrc"/>
        </item>
        <item row="3" column="0" colspan="3">
-        <widget class="QLineEdit" name="indexEditDst"/>
+        <widget class="QLineEdit" name="indexEditDst">
+         <property name="toolTip">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Leave blank if you would like to overwrite the source directory&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+        </widget>
        </item>
        <item row="0" column="0">
         <widget class="QLabel" name="indexLabelSrc">
@@ -89,53 +104,30 @@
        </item>
       </layout>
      </widget>
-     <widget class="QScrollArea" name="indexImageView">
+     <widget class="QPushButton" name="indexButtonSubmit">
       <property name="geometry">
        <rect>
-        <x>11</x>
-        <y>186</y>
-        <width>411</width>
-        <height>190</height>
-       </rect>
-      </property>
-      <property name="widgetResizable">
-       <bool>true</bool>
-      </property>
-      <widget class="QWidget" name="scrollAreaWidgetContents">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>409</width>
-         <height>188</height>
-        </rect>
-       </property>
-       <widget class="QScrollBar" name="indexScroll">
-        <property name="geometry">
-         <rect>
-          <x>390</x>
-          <y>0</y>
-          <width>16</width>
-          <height>187</height>
-         </rect>
-        </property>
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-       </widget>
-      </widget>
-     </widget>
-     <widget class="QLabel" name="label">
-      <property name="geometry">
-       <rect>
-        <x>17</x>
-        <y>165</y>
-        <width>47</width>
-        <height>13</height>
+        <x>347</x>
+        <y>160</y>
+        <width>75</width>
+        <height>23</height>
        </rect>
       </property>
       <property name="text">
-       <string>Images</string>
+       <string>Submit</string>
+      </property>
+     </widget>
+     <widget class="QProgressBar" name="indexProgressBar">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>160</y>
+        <width>331</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="value">
+       <number>24</number>
       </property>
      </widget>
     </widget>
@@ -143,101 +135,6 @@
      <attribute name="title">
       <string>Align Images</string>
      </attribute>
-     <widget class="QTabWidget" name="alignTabs">
-      <property name="geometry">
-       <rect>
-        <x>5</x>
-        <y>160</y>
-        <width>425</width>
-        <height>221</height>
-       </rect>
-      </property>
-      <property name="currentIndex">
-       <number>0</number>
-      </property>
-      <widget class="QWidget" name="tab">
-       <attribute name="title">
-        <string>Images</string>
-       </attribute>
-       <widget class="QScrollArea" name="alignImageView">
-        <property name="geometry">
-         <rect>
-          <x>4</x>
-          <y>4</y>
-          <width>411</width>
-          <height>190</height>
-         </rect>
-        </property>
-        <property name="widgetResizable">
-         <bool>true</bool>
-        </property>
-        <widget class="QWidget" name="scrollAreaWidgetContents_3">
-         <property name="geometry">
-          <rect>
-           <x>0</x>
-           <y>0</y>
-           <width>409</width>
-           <height>188</height>
-          </rect>
-         </property>
-         <widget class="QScrollBar" name="alignScrollImage">
-          <property name="geometry">
-           <rect>
-            <x>390</x>
-            <y>0</y>
-            <width>16</width>
-            <height>187</height>
-           </rect>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-         </widget>
-        </widget>
-       </widget>
-      </widget>
-      <widget class="QWidget" name="tab_2">
-       <attribute name="title">
-        <string>Conflicts</string>
-       </attribute>
-       <widget class="QScrollArea" name="alignConflictView">
-        <property name="geometry">
-         <rect>
-          <x>4</x>
-          <y>4</y>
-          <width>411</width>
-          <height>190</height>
-         </rect>
-        </property>
-        <property name="widgetResizable">
-         <bool>true</bool>
-        </property>
-        <widget class="QWidget" name="scrollAreaWidgetContents_5">
-         <property name="geometry">
-          <rect>
-           <x>0</x>
-           <y>0</y>
-           <width>409</width>
-           <height>188</height>
-          </rect>
-         </property>
-         <widget class="QScrollBar" name="alignScrollConflict">
-          <property name="geometry">
-           <rect>
-            <x>390</x>
-            <y>0</y>
-            <width>16</width>
-            <height>187</height>
-           </rect>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-         </widget>
-        </widget>
-       </widget>
-      </widget>
-     </widget>
      <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
@@ -279,7 +176,18 @@
         </widget>
        </item>
        <item row="1" column="3" colspan="2">
-        <widget class="QComboBox" name="alignComboType"/>
+        <widget class="QComboBox" name="alignComboType">
+         <item>
+          <property name="text">
+           <string>JPG</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>PNG</string>
+          </property>
+         </item>
+        </widget>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="alignLabelDst">
@@ -289,7 +197,11 @@
         </widget>
        </item>
        <item row="3" column="0" colspan="4">
-        <widget class="QLineEdit" name="alignEditDst"/>
+        <widget class="QLineEdit" name="alignEditDst">
+         <property name="toolTip">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Leave blank if you would like to overwrite the source directory&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+        </widget>
        </item>
        <item row="3" column="4">
         <widget class="QPushButton" name="alignButtonDst">
@@ -320,15 +232,53 @@
         </widget>
        </item>
        <item row="5" column="0">
-        <widget class="QLineEdit" name="alignEditWidth"/>
+        <widget class="QLineEdit" name="alignEditWidth">
+         <property name="text">
+          <string>1920</string>
+         </property>
+        </widget>
        </item>
        <item row="5" column="1" colspan="2">
-        <widget class="QLineEdit" name="alignEditHeight"/>
+        <widget class="QLineEdit" name="alignEditHeight">
+         <property name="text">
+          <string>1080</string>
+         </property>
+        </widget>
        </item>
        <item row="5" column="3" colspan="2">
-        <widget class="QLineEdit" name="alignEditScale"/>
+        <widget class="QLineEdit" name="alignEditScale">
+         <property name="text">
+          <string>200</string>
+         </property>
+        </widget>
        </item>
       </layout>
+     </widget>
+     <widget class="QPushButton" name="alignButtonSubmit">
+      <property name="geometry">
+       <rect>
+        <x>347</x>
+        <y>160</y>
+        <width>75</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Submit</string>
+      </property>
+     </widget>
+     <widget class="QProgressBar" name="alignProgressBar">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>160</y>
+        <width>331</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="value">
+       <number>24</number>
+      </property>
      </widget>
     </widget>
    </widget>
